--- a/viewer/viewer.html
+++ b/viewer/viewer.html
@@ -1,4 +1,5 @@
 <!DOCTIPE html>
+<!-- json2html と http-server を使う -->
 <html>
 <body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/json2html/2.2.3/json2html.min.js"></script>
